--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Check Gift Card Balance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G2XYS3ZKW0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G2XYS3ZKW0');
+</script>
      
 
 </head>
@@ -119,3 +128,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
