--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Check Gift Card Balance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+<link rel="shortcut icon" href="favicon.png">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G2XYS3ZKW0"></script>
 <script>
@@ -127,5 +129,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
